<resources>
    <string name="app_name">Val Block</string>
    <string name="frist_name">Frist Name</string>
    <string name="last_name">Last_Name</string>
    <string name="password">password</string>
    <string name="confimation_password">confimation_password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="biology_test">Biology Test</string>
</resources>