<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:src="@drawable/auth_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/frist_name"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_frist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:paddingHorizontal="16dp"
        app:passwordToggleContentDescription="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/confimation_password"
        android:paddingHorizontal="16dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/_et_confirmation_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:shadowColor="@color/black"
        android:text="@string/register"
        android:textSize="17dp" />

    <com.github.nikartm.button.FitButton
        android:id="@+id/fbtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="3dp"
        android:enabled="true"
        android:gravity="center_vertical"
        app:fb_backgroundColor="#FF7043"
        app:fb_cornerRadius="25dp"
        app:fb_divColor="#fff"
        app:fb_divHeight="40dp"
        app:fb_divWidth="1dp"
        app:fb_icon="@drawable/ic_thumb_up"
        app:fb_iconColor="#FFF"
        app:fb_iconHeight="28dp"
        app:fb_iconMarginEnd="16dp"
        app:fb_iconMarginStart="20dp"
        app:fb_iconPosition="left"
        app:fb_iconWidth="28dp"
        app:fb_rippleColor="#FBE9E7"
        app:fb_shape="rectangle"
        app:fb_text="Like Me"
        app:fb_textColor="#FFF"
        app:fb_textPaddingStart="16dp" />

</LinearLayout>